# tokenator

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  _typos.toml  deny.toml  dprint.json  justfile  yek.yaml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: dependency-review.yml  general.yml  links.yml  pre-commit.yml  scheduled-audit.yml  scorecard.yml  typos.yml  validate-licenses.yml
data/: models.json
src/: cli.rs  errors.rs  main.rs  models.rs  prompt.rs  token.rs  utility.rs
src/snapshots/: tokenator__models__tests__load_model_name_map_generates_expected_output_from_valid_input.snap
tests/cmd/: basic.stderr  basic.toml  help.stdout  help.toml
tests/integration/: main.rs  ui.rs
