[package]
name = "tokenator"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/tokenator"
# 2024 edition requires rust 1.85 or later
rust-version = "1.85"
description = "Count the number of tokens in an LLM prompt"

[dependencies]
ahash = "0.8.12"
clap = { version = "4.5.56", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
env_logger = "0.11.8"
hf-hub = "0.4.3"
inquire = "0.9.2"
log = "0.4.29"
miette = { version = "7.6.0", features = ["fancy"] }
num-format = "0.4.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strsim = "0.11.1"
thiserror = "2.0.18"
tokenizers = "0.22.2"
ureq = "2.12.1"

[dev-dependencies]
assert_fs = "1.1.3"
insta = { version = "1.46.1", features = ["filters", "glob", "json", "redactions"] }
rexpect = "0.6.3"
trycmd = "0.15.11"

[lints.clippy]
clone_on_ref_ptr = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"
